# gpt-commit-messages

./: LICENSE  README.md  gcm  pyproject.toml
gpt_commit_messages/: gpt_commit_messages.py
gpt_commit_messages/lib/: count_tokens.py
