[tool.poetry]
name = "gpt-commit-messages"
version = "0.1.0"
description = "Tool to draft git commit messages using OpenAI's GPT4 API (or GPT3.5)"
authors = ["Aditya Advani <aditya@bestparents.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpt_commit_messages"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^0.27.6"
click = "^8.1.3"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
